Do further spacing fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -136,7 +136,7 @@ body {
     /* font-family: myFirstFont; */
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     gap: 15px;
 
@@ -150,7 +150,7 @@ body {
     background-color: var(--primary-background-color);
     /* background-image: url("./backgrounds/sunset-bespin.png"); */
     height: 88vh;
-
+    overflow-y:auto;
 }
 
 
@@ -225,7 +225,7 @@ body {
 
 .middle-section {
     width: 100%;
-    height: 60vh;
+    height: 60%;
     border-radius: var(--general-border-radius);
     display: flex;
     flex-direction: column;
@@ -431,7 +431,7 @@ body {
     /* height: 20vh; */
     background-color: var(--primary-background-color);
 
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
 }
 
@@ -473,7 +473,7 @@ body {
 }
 
 
-@media (max-width: 425px) {
+@media (max-width: 435px) {
     :root {
         font-size: 7px;
 
@@ -504,6 +504,7 @@ body {
         margin: 10px;
         gap: 5px;
         justify-content: center;
+        
     }
 
     .header {
@@ -539,16 +540,17 @@ body {
 
     .middle-section {
         width: 100%;
-        height: 500px;
-
+      height: 60%;
     }
 
 
     .todays-weather-container {
 
         width: 70%;
+        height: 80%;
         justify-content: center;
         align-items: center;
+        gap: 6px;
 
     }
 
@@ -583,6 +585,7 @@ body {
       
         justify-content: left;
         align-items: center;
+        gap: 6px;
     }
 
     
